--- a/styles.css
+++ b/styles.css
@@ -26,15 +26,13 @@ nav {
 	padding: 1rem 1.5rem;
 }
 
-nav h1 {
+nav p {
 	padding: 0.5rem 1rem;
   /* padding-left: 2rem; */
-  font-size: small;
+  font-size: .5rem;
 	/* padding-right: calc(2rem - 10px); */
 	/* border-radius: 8px; */
 }
-
-
 
 .menu {
 	display: none;
@@ -48,8 +46,6 @@ nav h1 {
 	text-decoration: none;
 	transition: 0.3s;
 }
-
-
 
 .hamburger {
 	appearance: none;
@@ -80,7 +76,7 @@ nav h1 {
 	opacity: 0;
 	transform: translateY(-100%);
 	background-color: #000;
-	color: #FFF;
+	color: #FCEDCF;
 	transition: 0.3s;
 }
 
@@ -95,12 +91,12 @@ nav h1 {
 	color: #FFF;
 	text-align: center;
 	text-decoration: none;
-	font-size: 1.25rem;
+	font-size: 1rem;
 	transition: 0.3s;
 }
 
 .mobile-menu a:hover {
-	background-color: #FFF;
+    color: #FFF;
 }
 
 .Bbtn{
@@ -215,7 +211,7 @@ text-align: center;
 margin-top: 2rem;
 }
 #off2{
-font-family: "Manrrope";
+font-family: "Manrope";
 font-size: 25px;
 font-weight: 200; 
 margin-left: 2rem;
@@ -257,6 +253,7 @@ font-weight: 300;
 text-align: center;
 color:#F5F5F5;
 margin-top: 1.5rem;
+font-family: "Manrope", sans-serif ;
 } 
 .flex2 img{
   width: 95%;
@@ -460,6 +457,10 @@ text-align: center;
      width: 100%; 
     background-size: cover;
   } 
+
+  nav p{
+    font-size: .2rem;
+  }
   }
 
   /* website media query  */
